@@ -26,3 +26,4 @@
 9. add v2/order delete api
 10. add v2/order put api
 11. add v2/order/abnormal api
+12. add v2/order/calculate api
